--- a/index/index.html
+++ b/index/index.html
@@ -4,11 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
-    <link href="/index/src/output.css" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1 class="text-3xl font-bold">
-        Hello world!
-      </h1>
+<body class="flex-auto relative w-full h-screen bg-black bg-blend-multiply bg-center bg-cover bg-no-repeat">
+    <div>
+        <nav class="flex items-center">
+            <ul class="flex-1 text-center pt-3 text-xl font-normal">
+                <li class="list-none inline-block px-10"><a href="#" class="no-underline text-white px-1">Домой</a></li>
+                <li class="list-none inline-block px-10"><a href="#" class="no-underline text-white px-1">О нас</a></li>
+                <li class="list-none inline-block px-10"><a href="#" class="no-underline text-white px-1" style="background-color: #0763EC; border-radius: 2rem; padding: 0.5rem;">Войти | Регистрация</a></li>
+            </ul>
+        </nav>
+        </div>
+        <main>
+            <div class="text-white mt-40 font-serif pr-72 text-center">
+                <h1 class="text-6xl font-normal px-6">Готовы ли вы наконец</h1>
+                <h1 class="text-6xl font-normal px-6 pr-48">придерживаться</h1>
+                <h1 class="text-6xl font-normal px-6 pr-80">своих целей?</h1>
+                </div>
+        </main>
 </body>
 </html>
