Авторизация. Только соц-сети добавить

--- a/Auth/registration.html
+++ b/Auth/registration.html
@@ -7,21 +7,29 @@
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 
+
 <body>
+
     <main class="wrapper">
 
         <div class="auth-tabs">
-            <a href="" class="tab active">Вход</a>
-            <a href="registration.html" class="tab">Регистрация</a>
+            <a href="authorization.html" id="login-tab" class="tab">Вход</a>
+            <a href="registration.html" id="register-tab" class="tab active">Регистрация</a>
         </div>
 
         <form action="">
-            
+
             <div class="auth-box">
                 <input type="text" placeholder="Username">
                 <i class='bx bxs-user-circle'></i>
+            </div>
+
+            <div class="auth-box">
+                <input type="text" placeholder="Email">
+                <i class='bx bxl-gmail'></i>
             </div>
 
             <div class="auth-box">
@@ -35,6 +43,6 @@
 
 
     </main>
+    
 </body>
-
 </html>
