--- a/index/index.html
+++ b/index/index.html
@@ -10,18 +10,21 @@
 <body class="flex-auto relative w-full h-screen bg-black bg-blend-multiply bg-center bg-cover bg-no-repeat">
     <div>
         <nav class="flex items-center">
-            <ul class="flex-1 text-center pt-3 text-xl font-normal">
-                <li class="list-none inline-block px-10"><a href="#" class="no-underline text-white px-1">Домой</a></li>
+            <ul class="flex-1 text-center pt-5 text-xl font-normal">
+                <li class="list-none inline-block px-10 pb-5"><a href="#" class="no-underline text-white px-1">Домой</a></li>
                 <li class="list-none inline-block px-10"><a href="#" class="no-underline text-white px-1">О нас</a></li>
-                <li class="list-none inline-block px-10"><a href="#" class="no-underline text-white px-1" style="background-color: #0763EC; border-radius: 2rem; padding: 0.5rem;">Войти | Регистрация</a></li>
+                <li class="list-none inline-block px-10"><a href="#" class="no-underline text-white px-1" style="background-color: #0763EC; border-radius: 2rem; padding: 0.6rem;">Войти | Регистрация</a></li>
+                <hr class="m-auto" width="100%" size="2">
             </ul>
         </nav>
         </div>
         <main>
-            <div class="text-white mt-40 font-serif pr-72 text-center ">
+            <div class="text-white mt-40 font-serif pr-72 justify-center text-center ">
                 <h1 class="text-6xl font-normal px-6">Готовы ли вы наконец</h1>
-                <h1 class="text-6xl font-normal px-8 pr-48">придерживаться</h1>
-                <h1 class="text-6xl font-normal px-5 pr-80">своих целей?</h1>
+                <h1 class="text-6xl font-normal px-8 pt-3 pr-48">придерживаться</h1>
+                <h1 class="text-6xl font-normal px-5 pt-3 pr-80">своих целей?</h1>
+                <h1 class="text-6xl font-normal px-2 pt-3 pr-96">Я обязуюсь</h1>
+                <h1 class="text-5xl font-semibold pt-9 pr-36"><a href="#" class="no-underline text-white" style="background-color: #0763EC; border-radius: 1rem; padding: 0.5rem;">зарегистрироваться</a></h1>
                 </div>
         </main>
 </body>
