--- a/index/index.html
+++ b/index/index.html
@@ -7,24 +7,32 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="flex-auto relative w-full h-screen bg-black bg-blend-multiply bg-center bg-cover bg-no-repeat">
+<body class="flex-auto relative w-full h-screen" style="background-color: #131313;">
     <div>
         <nav class="flex items-center">
             <ul class="flex-1 text-center pt-5 text-xl font-normal">
                 <li class="list-none inline-block px-10 pb-5"><a href="#" class="no-underline text-white px-1">Домой</a></li>
                 <li class="list-none inline-block px-10"><a href="#" class="no-underline text-white px-1">О нас</a></li>
                 <li class="list-none inline-block px-10"><a href="#" class="no-underline text-white px-1" style="background-color: #0763EC; border-radius: 2rem; padding: 0.6rem;">Войти | Регистрация</a></li>
-                <hr class="m-auto" width="100%" size="2">
+                <hr class="sm:m-auto mt-6" width="100%" size="2">
             </ul>
         </nav>
-        </div>
-        <main>
-            <div class="text-white mt-40 font-serif pr-72 justify-center text-center ">
-                <h1 class="text-6xl font-normal px-6">Готовы ли вы наконец</h1>
-                <h1 class="text-6xl font-normal px-8 pt-3 pr-48">придерживаться</h1>
-                <h1 class="text-6xl font-normal px-5 pt-3 pr-80">своих целей?</h1>
-                <h1 class="text-6xl font-normal px-2 pt-3 pr-96">Я обязуюсь</h1>
-                <h1 class="text-5xl font-semibold pt-9 pr-36"><a href="#" class="no-underline text-white" style="background-color: #0763EC; border-radius: 1rem; padding: 0.5rem;">зарегистрироваться</a></h1>
+    </div>
+        <main class="h-dvh">
+            <div class="text-white mt-36 font-serif pr-72 text-center ">
+                <h1 class="text-3xl font-normal pr-52 px-7 lg:text-6xl lg:pr-7">Готовы ли вы наконец</h1>
+                <h1 class="text-3xl font-normal px-7 lg:text-6xl lg:pr-48 lg:pt-2 lg:px-8">придерживаться</h1>
+                <h1 class="text-3xl font-normal px-7  lg:text-6xl lg:pr-80 lg:pt-2 lg:px-4">своих целей?</h1>
+                <h1 class="text-3xl font-normal pr-52 px-7 pt-2 lg:text-6xl lg:pr-96 lg:pt-2 lg:px-1">Я обязуюсь</h1>
+                <h1 class="text-2xl font-semibold px-4 pt-6 sm:text-5xl sm:pr-40 sm:pt-9"><a href="#" class="no-underline text-white" style="background-color: #0763EC; border-radius: 1rem; padding: 0.5rem;">зарегистрироваться</a></h1>
+                </div>
+                <div class="text-white mt-64 pt-96 font-serif text-center">
+                    <h1 class="text-8xl">Как это работает?</h1>
+                    <h1 class="text-6xl pt-44">1. Определите цель.</h1>
+                    <div>
+                    <img class="todo" src="https://cdn-icons-png.flaticon.com/512/167/167552.png">
+                    <p class="text-4xl pt-12 pr-16 text-right font-normal">  Хотите похудеть, научиться новому навыку или сэкономить деньги? Укажите свою цель и дедлайн. Постарайтесь сформулировать цель как можно конкретнее: вместо «хочу похудеть» уточните, например, «хочу сбросить 5 килограммов за три месяца». Определите, почему эта цель для вас важна и как она повлияет на вашу жизнь — что изменится, когда вы её достигнете? Разбейте её на этапы, чтобы видеть прогресс, и убедитесь, что цель измеримая, реалистичная и достижимая в рамках установленного времени. Чем яснее будет ваше понимание цели, тем проще будет её достичь.</p>
+                </div>
                 </div>
         </main>
 </body>
