Сделал описание до 3
Третий скоро доделаю

--- a/index/index.html
+++ b/index/index.html
@@ -27,12 +27,16 @@
                 <h1 class="text-2xl font-semibold px-4 pt-6 sm:text-5xl sm:pr-40 sm:pt-9"><a href="#" class="no-underline text-white" style="background-color: #0763EC; border-radius: 1rem; padding: 0.5rem;">зарегистрироваться</a></h1>
                 </div>
                 <div class="text-white mt-64 pt-96 font-serif text-center">
-                    <h1 class="text-8xl">Как это работает?</h1>
-                    <h1 class="text-6xl pt-44">1. Определите цель.</h1>
-                    <div>
-                    <img class="todo" src="https://cdn-icons-png.flaticon.com/512/167/167552.png">
-                    <p class="text-4xl pt-12 pr-16 text-right font-normal">  Хотите похудеть, научиться новому навыку или сэкономить деньги? Укажите свою цель и дедлайн. Постарайтесь сформулировать цель как можно конкретнее: вместо «хочу похудеть» уточните, например, «хочу сбросить 5 килограммов за три месяца». Определите, почему эта цель для вас важна и как она повлияет на вашу жизнь — что изменится, когда вы её достигнете? Разбейте её на этапы, чтобы видеть прогресс, и убедитесь, что цель измеримая, реалистичная и достижимая в рамках установленного времени. Чем яснее будет ваше понимание цели, тем проще будет её достичь.</p>
-                </div>
+                            <h1 class="text-8xl">Как это работает?</h1>
+                    <h1 class="text-6xl pt-44">1. Определите цель.</h1>            
+                        <img class="todo pt-12" src="https://cdn-icons-png.flaticon.com/512/167/167552.png">
+                        <p class="text-4xl pt-12 pr-16 text-right font-normal lg:text-2xl lg:pt-12 lg:pr-16">Хотите похудеть, научиться новому навыку или сэкономить деньги? Укажите свою цель и дедлайн. Постарайтесь сформулировать цель как можно конкретнее: вместо «хочу похудеть» уточните, например, «хочу сбросить 5 килограммов за три месяца». Определите, почему эта цель для вас важна и как она повлияет на вашу жизнь — что изменится, когда вы её достигнете? Разбейте её на этапы, чтобы видеть прогресс, и убедитесь, что цель измеримая, реалистичная и достижимая в рамках установленного времени. Чем яснее будет ваше понимание цели, тем проще будет её достичь.</p>
+                    <h1 class="text-6xl pt-96">2. Создайте контракт.</h1> 
+                        <img class="todo1 pt-10" src="https://cdn-icons-png.freepik.com/512/15543/15543349.png">
+                        <p class="text-4xl pr-16 text-left font-normal lg:text-2xl lg:pt-12 lg:pl-16"> Заключите виртуальный контракт с самим собой. В контракте пропишите вашу цель, дедлайн и шаги, которые вы обязуетесь выполнить для её достижения. Чтобы повысить мотивацию, установите денежный залог, который вы потеряете, если не выполните свои обязательства. Также можно включить дополнительные условия: например, поощрение в случае успеха или ответственность перед другими людьми. Сделайте этот контракт максимально серьёзным, как если бы вы подписывали его с кем-то другим. Вы можете даже распечатать его и повесить на видное место, чтобы каждый день напоминать себе о своём обещании.</p>
+                        <h1 class="text-6xl pt-96">3. Создайте контракт.</h1> 
+                        <img class="todo1 pt-10" src="https://cdn-icons-png.freepik.com/512/15543/15543349.png">
+                        <p class="text-4xl pr-16 text-left font-normal lg:text-2xl lg:pt-12 lg:pl-16"> Заключите виртуальный контракт с самим собой. В контракте пропишите вашу цель, дедлайн и шаги, которые вы обязуетесь выполнить для её достижения. Чтобы повысить мотивацию, установите денежный залог, который вы потеряете, если не выполните свои обязательства. Также можно включить дополнительные условия: например, поощрение в случае успеха или ответственность перед другими людьми. Сделайте этот контракт максимально серьёзным, как если бы вы подписывали его с кем-то другим. Вы можете даже распечатать его и повесить на видное место, чтобы каждый день напоминать себе о своём обещании.</p>
                 </div>
         </main>
 </body>
