--- a/index/index.html
+++ b/index/index.html
@@ -25,7 +25,7 @@
                 <h1 class="text-3xl font-normal px-7  lg:text-6xl lg:pr-80 lg:pt-2 lg:px-4">своих целей?</h1>
                 <h1 class="text-3xl font-normal pr-52 px-7 pt-2 lg:text-6xl lg:pr-96 lg:pt-2 lg:px-1">Я обязуюсь</h1>
                 <h1 class="text-2xl font-semibold px-4 pt-6 sm:text-5xl sm:pr-40 sm:pt-9"><a href="/Auth/registration.html" class="no-underline text-white" style="background-color: #0763EC; border-radius: 1rem; padding: 0.5rem;">зарегистрироваться</a></h1>
-                </div>
+            </div>
                 <div class="text-white mt-64 pt-96 font-serif text-center">
                             <h1 class="text-2xl lg:text-8xl">Как это работает?</h1>
                     <h1 class="text-2xl pt-44 lg:text-6xl lg:pt-44">1. Определите цель.</h1>            
@@ -41,7 +41,8 @@
                         <img class="results pt-10" src="https://cdn-icons-png.flaticon.com/512/1077/1077874.png">
                         <p class="text-4xl pr-16 text-left font-normal lg:text-2xl lg:pt-12 lg:pl-16"> Отмечайте свои успехи и двигайтесь к мечте! Ведите дневник или таблицу прогресса, где будете фиксировать каждый выполненный шаг и достигнутые результаты. Регулярно анализируйте свои действия: что работает хорошо, а что можно улучшить. Не забывайте поощрять себя за достижения, даже небольшие, чтобы поддерживать мотивацию. Каждый маленький успех приближает вас к большой цели, поэтому не игнорируйте важность регулярной обратной связи с самим собой.</p>
                 </div>
-                <div class="text-white lg:mt-96" style="background-color: #0763EC; height: 420px;">
+                    <h1 class="text-2xl lg:text-8xl text-center text-white mt-96">Наши достижения</h1>
+                <div class="text-white lg:mt-20" style="background-color: #0763EC; height: 420px;">
                     <img class="h-auto max-w-xs ml-20 pt-7" src="https://cdn-icons-png.flaticon.com/512/5314/5314864.png">
                     <p class="text-2xl pl-10">Выдано более миллиона тенге <br> на благотворительность</br></p>
                 </div>
