--- a/index/index.html
+++ b/index/index.html
@@ -41,10 +41,18 @@
                         <img class="results pt-10" src="https://cdn-icons-png.flaticon.com/512/1077/1077874.png">
                         <p class="text-4xl pr-16 text-left font-normal lg:text-2xl lg:pt-12 lg:pl-16"> Отмечайте свои успехи и двигайтесь к мечте! Ведите дневник или таблицу прогресса, где будете фиксировать каждый выполненный шаг и достигнутые результаты. Регулярно анализируйте свои действия: что работает хорошо, а что можно улучшить. Не забывайте поощрять себя за достижения, даже небольшие, чтобы поддерживать мотивацию. Каждый маленький успех приближает вас к большой цели, поэтому не игнорируйте важность регулярной обратной связи с самим собой.</p>
                 </div>
-                    <h1 class="text-2xl lg:text-8xl text-center text-white mt-96">Наши достижения</h1>
-                <div class="text-white lg:mt-20" style="background-color: #0763EC; height: 420px;">
-                    <img class="h-auto max-w-xs ml-20 pt-7" src="https://cdn-icons-png.flaticon.com/512/5314/5314864.png">
-                    <p class="text-2xl pl-10">Выдано более миллиона тенге <br> на благотворительность</br></p>
+                <h1 class="text-2xl text-white lg:text-6xl lg:mt-96 text-center">
+                    Наши достижения
+                </h1>
+                <div class="icons text-white">
+                    <img class="h-auto max-w-xs lg:pl-16" src="Dollar.png">
+                    <img class="h-auto max-w-xs lg:pl-16" src="list.png">
+                    <img class="h-auto max-w-xs lg:pl-16" src="mountain.png">
+                </div>
+                <div class="text-white">
+                    <p class="text-xl pl-10 ">Выдано более миллиона тенге <br> на благотворительность</br></p>
+                    <p class="text-xl pl-10 ">Выдано более миллиона тенге <br> на благотворительность</br></p>
+                    <p class="text-xl pl-10 ">Выдано более миллиона тенге <br> на благотворительность</br></p>
                 </div>
         </main>
 </body>
