--- a/index/index.html
+++ b/index/index.html
@@ -30,10 +30,15 @@
                             <h1 class="text-2xl lg:text-8xl">Как это работает?</h1>
                     <h1 class="text-2xl pt-44 lg:text-6xl lg:pt-44">1. Определите цель.</h1>            
                         <img class="target pt-12 " src="https://cdn-icons-png.flaticon.com/512/167/167552.png">
-                        <p class="text-4xl pt-12 pr-16 text-right font-normal lg:text-2xl lg:pt-12 lg:pr-16">Хотите похудеть, научиться новому навыку или сэкономить деньги? Укажите свою цель и дедлайн. Постарайтесь сформулировать цель как можно конкретнее: вместо «хочу похудеть» уточните, например, «хочу сбросить 5 килограммов за три месяца». Определите, почему эта цель для вас важна и как она повлияет на вашу жизнь — что изменится, когда вы её достигнете? Разбейте её на этапы, чтобы видеть прогресс, и убедитесь, что цель измеримая, реалистичная и достижимая в рамках установленного времени. Чем яснее будет ваше понимание цели, тем проще будет её достичь.</p>
-                    <h1 class="text-6xl pt-96">2. Создайте контракт.</h1> 
+                        <p class="text-lg pt-12 text-right font-normal lg:text-2xl lg:pt-12 lg:pr-16">Хотите похудеть, 
+                            научиться новому навыку или сэкономить деньги? 
+                            Укажите свою цель и дедлайн. Постарайтесь сформулировать цель как можно конкретнее: 
+                            вместо «хочу похудеть» уточните, например, «хочу сбросить 5 килограммов за три месяца». Определите, почему эта цель для вас 
+                            важна и как она повлияет на вашу жизнь — что изменится, когда вы её достигнете? Разбейте её на этапы, чтобы видеть прогресс, и убедитесь, 
+                            что цель измеримая, реалистичная и достижимая в рамках установленного времени. Чем яснее будет ваше понимание цели, тем проще будет её достичь.</p>
+                    <h1 class="text-2xl pt-96 lg:text-6xl lg:pt-96">2. Создайте контракт.</h1> 
                         <img class="contract pt-10" src="https://cdn-icons-png.freepik.com/512/15543/15543349.png">
-                        <p class="text-4xl pr-16 text-left font-normal lg:text-2xl lg:pt-12 lg:pl-16"> Заключите виртуальный контракт с самим собой. В контракте пропишите вашу цель, дедлайн и шаги, которые вы обязуетесь выполнить для её достижения. Чтобы повысить мотивацию, установите денежный залог, который вы потеряете, если не выполните свои обязательства. Также можно включить дополнительные условия: например, поощрение в случае успеха или ответственность перед другими людьми. Сделайте этот контракт максимально серьёзным, как если бы вы подписывали его с кем-то другим. Вы можете даже распечатать его и повесить на видное место, чтобы каждый день напоминать себе о своём обещании.</p>
+                        <p class="text-lg pt-96 text-left font-normal lg:text-2xl lg:pt-12 lg:pl-16"> Заключите виртуальный контракт с самим собой. В контракте пропишите вашу цель, дедлайн и шаги, которые вы обязуетесь выполнить для её достижения. Чтобы повысить мотивацию, установите денежный залог, который вы потеряете, если не выполните свои обязательства. Также можно включить дополнительные условия: например, поощрение в случае успеха или ответственность перед другими людьми. Сделайте этот контракт максимально серьёзным, как если бы вы подписывали его с кем-то другим. Вы можете даже распечатать его и повесить на видное место, чтобы каждый день напоминать себе о своём обещании.</p>
                     <h1 class="text-6xl pt-96">3. Приглашайте своих близких.</h1> 
                         <img class="invite pt-10" src="https://cdn-icons-png.flaticon.com/512/4927/4927724.png">
                         <p class="text-4xl pr-16 text-left font-normal lg:text-2xl lg:pt-12 lg:pl-16"> Привлеките стороннего наблюдателя. Подключите друга, члена семьи или коллегу, чтобы они следили за вашим прогрессом. Этот человек должен быть ответственным и объективным, готовым напоминать вам о вашей цели и проверять выполнение шагов. Обсудите с ним вашу цель, контракт и сроки, чтобы он мог поддерживать вас на протяжении всего процесса. Вы также можете договориться, что он будет контролировать выполнение условий вашего контракта, включая денежный залог или другие обязательства. Чем больше вы поделитесь своим намерением с окружающими, тем сложнее будет отказаться от цели, так как ответственность перед другими людьми добавляет мотивации. Если у вас нет возможности привлечь кого-то лично, можно найти партнёра онлайн, который будет выполнять эту роль.</p>
@@ -41,19 +46,22 @@
                         <img class="results pt-10" src="https://cdn-icons-png.flaticon.com/512/1077/1077874.png">
                         <p class="text-4xl pr-16 text-left font-normal lg:text-2xl lg:pt-12 lg:pl-16"> Отмечайте свои успехи и двигайтесь к мечте! Ведите дневник или таблицу прогресса, где будете фиксировать каждый выполненный шаг и достигнутые результаты. Регулярно анализируйте свои действия: что работает хорошо, а что можно улучшить. Не забывайте поощрять себя за достижения, даже небольшие, чтобы поддерживать мотивацию. Каждый маленький успех приближает вас к большой цели, поэтому не игнорируйте важность регулярной обратной связи с самим собой.</p>
                 </div>
-                <h1 class="text-2xl text-white lg:text-6xl lg:mt-96 text-center">
+                <h1 class="text-2xl text-white lg:text-6xl pt-96 text-center">
                     Наши достижения
                 </h1>
-                <div class="icons text-white">
-                    <img class="h-auto max-w-xs lg:pl-16" src="Dollar.png">
-                    <img class="h-auto max-w-xs lg:pl-16" src="list.png">
-                    <img class="h-auto max-w-xs lg:pl-16" src="mountain.png">
+                <div class="icons text-white pt-44">
+                    <img class="" src="Dollar.png" alt="Dollar Icon">
+                    <img class="" src="list.png" alt="List Icon">
+                    <img class="" src="mountain.png" alt="Mountain Icon">
+                  </div>
+                  
+                <div class="text text-white text-center mt-6 ">
+                    <p class="text-xl">Выдано более миллиона тенге <br> на благотворительность</br></p>
+                    <p class="text-xl">Зарегистрировались более 1000 <br> человек </br></p>
+                    <p class="text-xl">Выполнено более 10000 целей</p>
                 </div>
-                <div class="text-white">
-                    <p class="text-xl pl-10 ">Выдано более миллиона тенге <br> на благотворительность</br></p>
-                    <p class="text-xl pl-10 ">Выдано более миллиона тенге <br> на благотворительность</br></p>
-                    <p class="text-xl pl-10 ">Выдано более миллиона тенге <br> на благотворительность</br></p>
-                </div>
+
+                  
         </main>
 </body>
 </html>
