переделал вкладку наши достижении

--- a/index/index.html
+++ b/index/index.html
@@ -49,18 +49,16 @@
                 <h1 class="text-2xl text-white lg:text-6xl pt-96 text-center">
                     Наши достижения
                 </h1>
+                <div class=" blue" style="background-color: #0763EC; border-radius: 5rem;">
                 <div class="icons text-white pt-44">
-                    <img class="" src="Dollar.png" alt="Dollar Icon">
-                    <img class="" src="list.png" alt="List Icon">
-                    <img class="" src="mountain.png" alt="Mountain Icon">
-                  </div>
-                  
-                <div class="text text-white text-center mt-6 ">
+                    <img class="" src="https://cdn-icons-png.flaticon.com/512/181/181645.png" alt="Dollar Icon">
                     <p class="text-xl">Выдано более миллиона тенге <br> на благотворительность</br></p>
+                    <img class="" src="list.png" alt="List Icon">
                     <p class="text-xl">Зарегистрировались более 1000 <br> человек </br></p>
+                    <img class="" src="goal.png" alt="Mountain Icon">
                     <p class="text-xl">Выполнено более 10000 целей</p>
+                  </div>
                 </div>
-
                   
         </main>
 </body>
