--- a/index/index.html
+++ b/index/index.html
@@ -19,7 +19,7 @@
         </nav>
     </div>
         <main class="h-dvh">
-            <div class="text-white mt-36 font-serif pr-72 text-center ">
+            <div class=" text-white mt-36 font-serif pr-72 text-center ">
                 <h1 class="text-3xl font-normal pr-52 px-7 lg:text-6xl lg:pr-7">Готовы ли вы наконец</h1>
                 <h1 class="text-3xl font-normal px-7 lg:text-6xl lg:pr-48 lg:pt-2 lg:px-8">придерживаться</h1>
                 <h1 class="text-3xl font-normal px-7  lg:text-6xl lg:pr-80 lg:pt-2 lg:px-4">своих целей?</h1>
@@ -50,7 +50,7 @@
                     Наши достижения
                 </h1>
                 <div class=" blue" style="background-color: #0763EC; border-radius: 5rem;">
-                <div class="icons text-white pt-44">
+                <div class="icons flex  text-white lg:pt-44">
                     <img class="" src="https://cdn-icons-png.flaticon.com/512/181/181645.png" alt="Dollar Icon">
                     <p class="text-xl">Выдано более миллиона тенге <br> на благотворительность</br></p>
                     <img class="" src="list.png" alt="List Icon">
