--- a/index/index.html
+++ b/index/index.html
@@ -50,7 +50,7 @@
                     Наши достижения
                 </h1>
                 <div class="blue" style="background-color: #0763EC; border-radius: 5rem;">
-                <div class="icons flex text-white lg:pt-44">
+                <div class="icons flex text-white">
                     <img class="" src="https://cdn-icons-png.flaticon.com/512/181/181645.png" alt="Dollar Icon">
                     <p class="text-xl">Выдано более миллиона тенге <br> на благотворительность</br></p>
                     <img class="" src="list.png" alt="List Icon">
