--- a/Person Account/PersAcc.html
+++ b/Person Account/PersAcc.html
@@ -23,8 +23,8 @@
             <img class="rounded-full" alt="Аватар" src="User.png">
             <h1> Логин </h1>
             <h1> Email </h1>
-            <h1> Выполнено договоров </h1>
         
+            <button class="logout-button" onclick="logout()">Выйти из аккаунта</button>
         </div>
     
     </main>
