--- a/index/index.html
+++ b/index/index.html
@@ -6,8 +6,10 @@
     <title>Index</title>
     <link rel="stylesheet" href="/ForTailWindCSS/styleTW.css">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="flex-auto relative w-full h-screen" style="background-color: #131313;">
+    <header>
     <div>
         <nav class="flex items-center">
             <ul class="flex-1 text-center pt-5 text-xl font-normal">
@@ -18,6 +20,7 @@
             </ul>
         </nav>
     </div>
+    </header>
         <main class="h-dvh">
             <div class=" text-white mt-36 font-serif pr-72 text-center ">
                 <h1 class="text-3xl font-normal pr-52 px-7 lg:text-6xl lg:pr-7">Готовы ли вы наконец</h1>
@@ -26,25 +29,20 @@
                 <h1 class="text-3xl font-normal pr-52 px-7 pt-2 lg:text-6xl lg:pr-96 lg:pt-2 lg:px-1">Я обязуюсь</h1>
                 <h1 class="text-2xl font-semibold px-4 pt-6 sm:text-5xl sm:pr-40 sm:pt-9"><a href="/Auth/registration.html" class="no-underline text-white" style="background-color: #0763EC; border-radius: 1rem; padding: 0.5rem;">зарегистрироваться</a></h1>
             </div>
-                <div class="text-white mt-64 pt-96 font-serif text-center">
-                            <h1 class="text-2xl lg:text-8xl">Как это работает?</h1>
-                    <h1 class="text-2xl pt-44 lg:text-6xl lg:pt-44">1. Определите цель.</h1>            
-                        <img class="target pt-12 " src="https://cdn-icons-png.flaticon.com/512/167/167552.png">
-                        <p class="text-lg pt-12 text-right font-normal lg:text-2xl lg:pt-12 lg:pr-16">Хотите похудеть, 
-                            научиться новому навыку или сэкономить деньги? 
-                            Укажите свою цель и дедлайн. Постарайтесь сформулировать цель как можно конкретнее: 
-                            вместо «хочу похудеть» уточните, например, «хочу сбросить 5 килограммов за три месяца». Определите, почему эта цель для вас 
-                            важна и как она повлияет на вашу жизнь — что изменится, когда вы её достигнете? Разбейте её на этапы, чтобы видеть прогресс, и убедитесь, 
-                            что цель измеримая, реалистичная и достижимая в рамках установленного времени. Чем яснее будет ваше понимание цели, тем проще будет её достичь.</p>
-                    <h1 class="text-2xl pt-96 lg:text-6xl lg:pt-96">2. Создайте контракт.</h1> 
-                        <img class="contract pt-10" src="https://cdn-icons-png.freepik.com/512/15543/15543349.png">
-                        <p class="text-lg pt-96 text-left font-normal lg:text-2xl lg:pt-12 lg:pl-16"> Заключите виртуальный контракт с самим собой. В контракте пропишите вашу цель, дедлайн и шаги, которые вы обязуетесь выполнить для её достижения. Чтобы повысить мотивацию, установите денежный залог, который вы потеряете, если не выполните свои обязательства. Также можно включить дополнительные условия: например, поощрение в случае успеха или ответственность перед другими людьми. Сделайте этот контракт максимально серьёзным, как если бы вы подписывали его с кем-то другим. Вы можете даже распечатать его и повесить на видное место, чтобы каждый день напоминать себе о своём обещании.</p>
-                    <h1 class="text-6xl pt-96">3. Приглашайте своих близких.</h1> 
-                        <img class="invite pt-10" src="https://cdn-icons-png.flaticon.com/512/4927/4927724.png">
-                        <p class="text-4xl pr-16 text-left font-normal lg:text-2xl lg:pt-12 lg:pl-16"> Привлеките стороннего наблюдателя. Подключите друга, члена семьи или коллегу, чтобы они следили за вашим прогрессом. Этот человек должен быть ответственным и объективным, готовым напоминать вам о вашей цели и проверять выполнение шагов. Обсудите с ним вашу цель, контракт и сроки, чтобы он мог поддерживать вас на протяжении всего процесса. Вы также можете договориться, что он будет контролировать выполнение условий вашего контракта, включая денежный залог или другие обязательства. Чем больше вы поделитесь своим намерением с окружающими, тем сложнее будет отказаться от цели, так как ответственность перед другими людьми добавляет мотивации. Если у вас нет возможности привлечь кого-то лично, можно найти партнёра онлайн, который будет выполнять эту роль.</p>
-                    <h1 class="text-6xl pt-96">4. Следите за результатами.</h1> 
-                        <img class="results pt-10" src="https://cdn-icons-png.flaticon.com/512/1077/1077874.png">
-                        <p class="text-4xl pr-16 text-left font-normal lg:text-2xl lg:pt-12 lg:pl-16"> Отмечайте свои успехи и двигайтесь к мечте! Ведите дневник или таблицу прогресса, где будете фиксировать каждый выполненный шаг и достигнутые результаты. Регулярно анализируйте свои действия: что работает хорошо, а что можно улучшить. Не забывайте поощрять себя за достижения, даже небольшие, чтобы поддерживать мотивацию. Каждый маленький успех приближает вас к большой цели, поэтому не игнорируйте важность регулярной обратной связи с самим собой.</p>
+                <div class="text-white -mt-20 pt-96 font-serif text-center">
+                            <h1 class="text-2xl lg:text-6xl">Как это работает?</h1>
+                    <h1 class="text-2xl pt-44 lg:text-4xl lg:pt-44">1. Определите цель.</h1>            
+                        <img class="target pt-12 h-auto max-w-xs" src="https://cdn-icons-png.flaticon.com/512/167/167552.png">
+                        <p class="text-lg pt-12 text-left font-normal lg:text-xl lg:pt-12 lg:pr-16">Хотите похудеть, освоить новый навык или сэкономить деньги? Четко сформулируйте цель и дедлайн: вместо «хочу похудеть» укажите «сбросить 5 кг за 3 месяца». Подумайте, почему это важно и как изменится ваша жизнь. Разбейте цель на этапы, чтобы отслеживать прогресс. Убедитесь, что она измерима, реалистична и достижима в срок. Чем яснее цель, тем проще её достичь.</p>
+                    <h1 class="text-2xl pt-96 lg:text-4xl lg:pt-96">2. Создайте контракт.</h1> 
+                        <img class="contract pt-10 h-auto max-w-xs" src="https://cdn-icons-png.freepik.com/512/15543/15543349.png">
+                        <p class="text-lg pt-96 text-left font-normal lg:text-xl lg:pt-12 lg:pl-16"> Составьте виртуальный контракт с собой, указав цель, дедлайн и шаги для её достижения. Добавьте залог, который потеряете в случае невыполнения, и поощрение за успех. Сделайте контракт серьёзным: распечатайте и разместите на видном месте для ежедневного напоминания.</p>
+                    <h1 class="text-2xl pt-96 lg:text-4xl lg:pt-96">3. Приглашайте своих близких.</h1> 
+                        <img class="invite pt-10 h-auto max-w-xs" src="https://cdn-icons-png.flaticon.com/512/4927/4927724.png">
+                        <p class="text-lg pr-16 text-left font-normal lg:text-xl lg:pt-12 lg:pl-16"> Привлеките наблюдателя — друга, родственника или коллегу, который будет следить за вашим прогрессом, напоминать о цели и проверять выполнение шагов. Обсудите с ним детали контракта и сроки. Ответственность перед другими повышает мотивацию. Если никого нет рядом, найдите партнёра онлайн.</p>
+                    <h1 class="text-2xl pt-96 lg:text-4xl lg:pt-96">4. Следите за результатами.</h1> 
+                        <img class="results pt-10 h-auto max-w-xs" src="https://cdn-icons-png.flaticon.com/512/1077/1077874.png">
+                        <p class="text-lg pr-16 text-left font-normal lg:text-xl lg:pt-12 lg:pl-16"> Отмечайте свои успехи и двигайтесь к мечте! Ведите дневник или таблицу прогресса, где будете фиксировать каждый выполненный шаг и достигнутые результаты. Регулярно анализируйте свои действия: что работает хорошо, а что можно улучшить. Не забывайте поощрять себя за достижения, даже небольшие, чтобы поддерживать мотивацию. Каждый маленький успех приближает вас к большой цели, поэтому не игнорируйте важность регулярной обратной связи с самим собой.</p>
                 </div>
                 <h1 class="text-2xl text-white lg:text-6xl pt-96 text-center">
                     Наши достижения
@@ -59,7 +57,13 @@
                     <p class="text-xl">Выполнено более 10000 целей</p>
                   </div>
                 </div>
+                <footer class="text-center">
+                    <div class="flex justify-between items-center text-white mt-36 text-2xl px-6 mb-4">
+                      <p class="flex-1 text-center">Контакты</p>
+                      <p class="flex">© 2024</p>
+                    </div>
+                  </footer>
                   
-        </main>
+        </main>       
 </body>
 </html>
