--- a/index/index.html
+++ b/index/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title>Название компании</title>
     <link rel="stylesheet" href="/ForTailWindCSS/styleTW.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -13,8 +13,8 @@
     <div>
         <nav class="flex items-center">
             <ul class="flex-1 text-center pt-5 text-xl font-normal">
-                <li class="list-none inline-block px-10 pb-5"><a href="#" class="no-underline text-white px-1">Домой</a></li>
-                <li class="list-none inline-block px-10"><a href="#" class="no-underline text-white px-1">О нас</a></li>
+                <li class="list-none inline-block px-10 pb-5"><a href="index.html" class="no-underline text-white px-1">Домой</a></li>
+                <li class="list-none inline-block px-10"><a href="/O nas/o nas.html" class="no-underline text-white px-1">О нас</a></li>
                 <li class="list-none inline-block px-10"><a href="/Auth/authorization.html" class="no-underline text-white px-1" style="background-color: #0763EC; border-radius: 2rem; padding: 0.6rem;">Войти | Регистрация</a></li>
                 <hr class="sm:m-auto mt-6" width="100%" size="2">
             </ul>
