--- a/index/index.html
+++ b/index/index.html
@@ -58,13 +58,13 @@
                             <p class="text-xl">Зарегистрировались более 1000 <br> человек</p>
                         </div>
                         <div class="icon-block">
-                            <img src="goal.png" alt="Mountain Icon">
+                            <img class="mountain" src="goal.png" alt="Mountain Icon">
                             <p class="text-xl">Выполнено более 10000 целей</p>
                         </div>
                     </div>
                 </div>
             <footer class="text-center">
-                    <div class="flex justify-between items-center text-white mt-36 text-2xl px-6 mb-4">
+                    <div class="flex justify-between items-center text-white mt-36 text-sm px-6 mb-4 lg:text-2xl">
                       <p class="flex-1 text-center">Контакты</p>
                       <p class="flex">© 2024</p>
                     </div>
