--- a/O nas/o nas.html
+++ b/O nas/o nas.html
@@ -21,13 +21,13 @@
     </nav>
     </div>
     </header>
-    <main>
+    <main class="h-dvh">
       <div class="text-white">
-      <span class="mt-16 ml-80 before:block before:absolute before:-inset-6 before:-skew-y-2 before:-skew-x-12 before:bg-blue-600 relative inline-block ">
-        <p class="text-5xl text-center relative">Кто мы?</p>
-      </span>
         <img class="h-auto max-w-xs ml-4 sm:max-w-sm md:max-w-md lg:max-w-lg lg:float-left lg:-ml-16" src="target.png">
-        <p class="text-center text-base lg:text-left 2xl:pr-52 lg:pt-16 lg:text-xl ">Идея создания нашего проекта родилась из стремления вдохновлять людей на достижение своих целей и изменение своей жизни к лучшему. Мы верим, что мотивация – это ключ к успеху, но порой её сложно найти. Тогда мы задумались: как можно превратить привычное обещание «с понедельника начну» в реальное действие? Ответ оказался прост – добавить ответственность и значимость. Так появился наш сайт, который помогает не просто ставить цели, но и делать их действительно важными. Суть в том, что вы вкладываете свои деньги, как символ серьёзного намерения, и ставите перед собой чёткий план. <br> Если вы достигаете своих целей – ваши деньги возвращаются к вам, как заслуженная награда. Но если вы сдадитесь на полпути, эти средства не пропадут зря, а будут направлены на благотворительность, поддерживая тех, кому они необходимы.</br></p>        
+        <span class="ml-32 lg:mt-16 lg:ml-80 before:block before:absolute before:-inset-6 before:-skew-y-2 before:-skew-x-12 before:bg-blue-600 relative inline-block ">
+          <p class="text-2xl lg:text-5xl text-center relative">Кто мы?</p>
+        </span>
+        <p class="text-center text-base mt-16 lg:mt-auto lg:text-left 2xl:pr-52 lg:pt-16 lg:text-xl ">Идея создания нашего проекта родилась из стремления вдохновлять людей на достижение своих целей и изменение своей жизни к лучшему. Мы верим, что мотивация – это ключ к успеху, но порой её сложно найти. Тогда мы задумались: как можно превратить привычное обещание «с понедельника начну» в реальное действие? Ответ оказался прост – добавить ответственность и значимость. Так появился наш сайт, который помогает не просто ставить цели, но и делать их действительно важными. Суть в том, что вы вкладываете свои деньги, как символ серьёзного намерения, и ставите перед собой чёткий план. <br> Если вы достигаете своих целей – ваши деньги возвращаются к вам, как заслуженная награда. Но если вы сдадитесь на полпути, эти средства не пропадут зря, а будут направлены на благотворительность, поддерживая тех, кому они необходимы.</br></p>        
       </div>
     </main>
 </body>
