--- a/index/index.html
+++ b/index/index.html
@@ -79,7 +79,7 @@
                 </div>
             <footer class="text-center">
                     <div class="flex justify-between items-center text-white mt-36 text-sm px-6 mb-4 lg:text-2xl">
-                      <p class="flex-1 text-center">Контакты</p>
+                      <p class="flex-1 text-center"><a href="/contacts/contacts.html " class="no-underline text-white px-1 hover:text-[#90bbfc] transition duration-300">Контакты</a></p>
                       <p class="flex">© 2024</p>
                     </div>
             </footer>   
