--- a/index/index.html
+++ b/index/index.html
@@ -78,8 +78,8 @@
                     </div>
                 </div>
             <footer class="text-center">
-                    <div class="flex justify-between items-center text-white mt-36 text-sm px-6 mb-4 lg:text-2xl">
-                      <p class="flex-1 text-center"><a href="/contacts/contacts.html " class="no-underline text-white px-1 hover:text-[#90bbfc] transition duration-300">Контакты</a></p>
+                    <div class="flex justify-between text-white text-base mt-20 lg:mt-36 lg:px-6 lg:text-2xl">
+                      <p class="flex-1"><a href="/contacts/contacts.html " class="no-underline text-white px-1 hover:text-[#90bbfc] transition duration-300">Контакты</a></p>
                       <p class="flex">© 2024</p>
                     </div>
             </footer>   
